# euchre

./: Cargo.toml  LICENSE  euchre.service
backend/: Cargo.toml  build.rs
backend/src/: game.rs  main.rs  rate_limiter.rs  room.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: playing-card.tsx
frontend/src/hooks/: use-game-socket.ts
frontend/src/lib/: api.ts  cards.ts  route.ts
frontend/src/screens/: game-table.tsx  join-room.tsx  lobby.tsx  room.tsx
shared/: Cargo.toml
shared/src/: lib.rs
