[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
log = "0.4.33"
rand = "0.9"
env_logger = "0.11.11"

[build-dependencies]
shared = { path = "../shared" }
ts-rs = "12"

[dev-dependencies]
tokio-tungstenite = "0.27"
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
